--- a/WpfApp1/Style/TextBox.xaml
+++ b/WpfApp1/Style/TextBox.xaml
@@ -1,65 +1,44 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
-    <Color x:Key="ThemeColor">#FFFFFF</Color>
-    <SolidColorBrush x:Key="ThemeBrush" Color="{StaticResource ThemeColor}" />
-
-    <Color x:Key="MouseOverColor">#326CF3</Color>
-    <SolidColorBrush x:Key="MouseOverBrush" Color="{StaticResource MouseOverColor}" />
 
     <ControlTemplate x:Key="SimpleTextBoxTemplate" TargetType="{x:Type TextBox}">
         <Grid SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}"
               HorizontalAlignment="{TemplateBinding HorizontalAlignment}"
-              VerticalAlignment="{TemplateBinding VerticalAlignment}"
-              Margin="0">
-            <VisualStateManager.VisualStateGroups>
-                <VisualStateGroup x:Name="CommonStates">
-                    <VisualStateGroup.Transitions>
-                        <VisualTransition GeneratedDuration="0:0:0.1" />
-                    </VisualStateGroup.Transitions>
-                    <VisualState x:Name="Normal" />
-                    <VisualState x:Name="MouseOver">
-                        <Storyboard>
-                            <ColorAnimationUsingKeyFrames
-                                Storyboard.TargetProperty="(TextBox.Foreground).(SolidColorBrush.Color)">
-                                <EasingColorKeyFrame KeyTime="0" Value="{DynamicResource MouseOverColor}" />
-                            </ColorAnimationUsingKeyFrames>
-                        </Storyboard>
-                    </VisualState>
-                    <VisualState x:Name="Disabled" />
-                    <VisualState x:Name="ReadOnly" />
-                </VisualStateGroup>
-            </VisualStateManager.VisualStateGroups>
-            <Border x:Name="NormalVisual" Opacity="1"
+              VerticalAlignment="{TemplateBinding VerticalAlignment}">
+            <Border x:Name="NormalVisual"
+                    BorderBrush="{DynamicResource SystemControlBackgroundBaseHighBrush}"
                     BorderThickness="{TemplateBinding BorderThickness}"
-                    BorderBrush="{TemplateBinding BorderBrush}"
                     Background="{TemplateBinding Background}" />
             <ScrollViewer x:Name="PART_ContentHost"
                           BorderThickness="0"
                           IsTabStop="False"
-                          Margin="{TemplateBinding Padding}"
+                          Margin="0"
                           VerticalAlignment="Stretch"
                           VerticalContentAlignment="{TemplateBinding VerticalContentAlignment}"
                           Background="{x:Null}"
                           HorizontalAlignment="Stretch"
                           HorizontalContentAlignment="{TemplateBinding HorizontalContentAlignment}" />
         </Grid>
+        <ControlTemplate.Triggers>
+            <Trigger Property="IsMouseOver" Value="True">
+                <Setter TargetName="NormalVisual" Property="Opacity" Value="1.0" />
+                <Setter TargetName="PART_ContentHost" Property="Opacity" Value="0.8" />
+            </Trigger>
+            <Trigger Property="IsMouseOver" Value="False">
+                <Setter TargetName="NormalVisual" Property="Opacity" Value="0.8" />
+                <Setter TargetName="PART_ContentHost" Property="Opacity" Value="1.0" />
+            </Trigger>
+        </ControlTemplate.Triggers>
     </ControlTemplate>
 
     <Style x:Key="SimpleTextBox" TargetType="{x:Type TextBox}">
         <Setter Property="SnapsToDevicePixels" Value="True" />
         <Setter Property="OverridesDefaultStyle" Value="True" />
-        <Setter Property="Width" Value="120" />
         <Setter Property="Margin" Value="2" />
-        <Setter Property="BorderBrush" Value="Gray" />
         <Setter Property="BorderThickness" Value="0,0,0,1" />
         <Setter Property="HorizontalContentAlignment" Value="Left" />
         <Setter Property="VerticalContentAlignment" Value="Center" />
-        <Setter Property="Foreground">
-            <Setter.Value>
-                <SolidColorBrush Color="{DynamicResource ThemeColor}" />
-            </Setter.Value>
-        </Setter>
+        <Setter Property="Foreground" Value="{DynamicResource SystemControlForegroundAccentBrush}" />
         <Setter Property="Template" Value="{StaticResource SimpleTextBoxTemplate}" />
     </Style>
-
 </ResourceDictionary>
