--- a/WpfApp8/Control/IconButton.xaml
+++ b/WpfApp8/Control/IconButton.xaml
@@ -8,6 +8,7 @@
 
     <Style TargetType="{x:Type control:IconButton}" x:Key="ImageButtonStyle">
         <!--设置按钮的默认的样式-->
+        <Setter Property="Cursor" Value="Hand" />
         <Setter Property="Height" Value="60" />
         <Setter Property="Width" Value="60" />
         <!-- SystemControlForegroundBaseHighBrush就是这个 -->
@@ -28,7 +29,7 @@
                                       Fill="{DynamicResource SystemControlForegroundBaseHighBrush}"
                                       HorizontalAlignment="Center" VerticalAlignment="Center"
                                       Grid.Row="0" />
-                                <ContentPresenter Margin="2"
+                                <ContentPresenter Margin="0"
                                                   HorizontalAlignment="Center" VerticalAlignment="Center"
                                                   Grid.Row="1">
                                     <ContentPresenter.Resources>
