--- a/WpfApp8/Control/IconCheckBox.xaml
+++ b/WpfApp8/Control/IconCheckBox.xaml
@@ -9,6 +9,7 @@
 
     <Style TargetType="{x:Type control:IconCheckBox}" x:Key="IconCheckBoxStyle">
         <!--设置按钮的默认的样式-->
+        <Setter Property="Cursor" Value="Hand" />
         <Setter Property="Height" Value="60" />
         <Setter Property="Width" Value="60" />
         <!-- SystemControlForegroundBaseHighBrush就是这个 -->
