WpfApp8: 仿win10的SidePanel效果

--- a/WpfApp8/Views/MainWindow.xaml
+++ b/WpfApp8/Views/MainWindow.xaml
@@ -11,64 +11,82 @@
         d:DataContext="{d:DesignInstance vm:MainViewModel, IsDesignTimeCreatable=True}"
         ui:WindowHelper.UseModernWindowStyle="True"
         Title="MainWindow" Height="720" Width="1080">
-    <Grid>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="*" />
-            <RowDefinition Height="Auto" />
-        </Grid.RowDefinitions>
-        <Grid Grid.Row="0">
-            <Popup x:Name="PopTest" PopupAnimation="Fade" PlacementTarget="{Binding ElementName=BtnTest}"
-                   StaysOpen="False" SnapsToDevicePixels="True" ClipToBounds="True" AllowsTransparency="True"
-                   Placement="Top" VerticalOffset="25">
-                <Border BorderBrush="Gray" BorderThickness="1">
-                    <WrapPanel x:Name="PanelTest" Width="430"
-                               Background="{DynamicResource SystemControlBackgroundAltHighBrush}">
+    <Window.Resources>
+        <!-- Opening -->
+        <!-- Closing -->
+    </Window.Resources>
+    <wpf:VideoView x:Name="VideoView0" Panel.ZIndex="1">
+        <Grid MouseDown="Window_MouseDown">
+            <Grid.Resources>
+                <Style TargetType="HeaderedContentControl">
+                    <Setter Property="Margin" Value="0,0,0,0" />
+                    <Setter Property="IsTabStop" Value="False" />
+                    <Setter Property="HeaderTemplate">
+                        <Setter.Value>
+                            <DataTemplate>
+                                <TextBlock
+                                    Text="{Binding}"
+                                    FontSize="14"
+                                    Style="{StaticResource BaseTextBlockStyle}"
+                                    Margin="12,0,0,12" />
+                            </DataTemplate>
+                        </Setter.Value>
+                    </Setter>
+                </Style>
+            </Grid.Resources>
+            <!-- win10's background of side panel: SystemControlBackgroundAltMediumHighBrush -->
+            <Grid x:Name="LeftMenu" Width="280"
+                  HorizontalAlignment="Left"
+                  Margin="-280,0,0,0"
+                  Background="{DynamicResource SystemControlBackgroundAltMediumHighBrush}"
+                  Panel.ZIndex="2">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="Auto" />
+                    <RowDefinition Height="*" />
+                </Grid.RowDefinitions>
+                <Border BorderBrush="#AF1719" BorderThickness="1" VerticalAlignment="Bottom" Grid.Row="0" />
+                <HeaderedContentControl Header="状态信息" VerticalAlignment="Bottom" Grid.Row="1">
+                    <WrapPanel Margin="12,0,12,12" Width="256">
                         <control:MetroButton Content="连接" Icon="{StaticResource IconGamepad}"
-                                             Style="{StaticResource MetroButtonStyle}" Margin="3"
+                                             Style="{StaticResource MetroButtonStyle}" Margin="2"
                                              Command="{Binding CommandConnect}" />
                         <control:MetroButton Content="网络" Icon="{StaticResource IconRightDrawer}"
-                                             Style="{DynamicResource MetroButtonStyle}" Margin="3"
+                                             Style="{DynamicResource MetroButtonStyle}" Margin="2"
                                              Command="{Binding CommandNetwork}" />
                         <control:MetroButton Content="所有设置" Icon="{StaticResource IconSetting}"
-                                             Style="{DynamicResource MetroButtonStyle}" Margin="3"
+                                             Style="{DynamicResource MetroButtonStyle}" Margin="2"
                                              Command="{Binding CommandSettings}" />
                         <control:MetroButton Content="飞行模式" Icon="{StaticResource IconReconnect}"
-                                             Style="{DynamicResource MetroButtonStyle}" Margin="3"
+                                             Style="{DynamicResource MetroButtonStyle}" Margin="2"
                                              Command="{Binding CommandAirplane}" />
                         <control:MetroButton Content="定位" Icon="{StaticResource IconTonality}"
-                                             Style="{DynamicResource MetroButtonStyle}" Margin="3"
+                                             Style="{DynamicResource MetroButtonStyle}" Margin="2"
                                              Command="{Binding CommandLocate}" />
 
                         <control:MetroCheckBox Content="专注助手" Icon="{StaticResource IconExpertMode}"
-                                               Style="{DynamicResource MetroCheckBoxStyle}" Margin="3"
+                                               Style="{DynamicResource MetroCheckBoxStyle}" Margin="2"
                                                IsChecked="{Binding IsInFocus}" />
                         <control:MetroCheckBox Content="移动热点" Icon="{StaticResource IconGamepad}"
-                                               Style="{DynamicResource MetroCheckBoxStyle}" Margin="3"
+                                               Style="{DynamicResource MetroCheckBoxStyle}" Margin="2"
                                                IsChecked="{Binding IsHotpot}" />
                         <control:MetroCheckBox Content="夜间模式" Icon="{StaticResource IconGamepad}"
-                                               Style="{DynamicResource MetroCheckBoxStyle}" Margin="3"
+                                               Style="{DynamicResource MetroCheckBoxStyle}" Margin="2"
                                                IsChecked="{Binding IsNightMode}" />
                         <control:MetroCheckBox Content="未连接" Icon="{StaticResource IconGamepad}"
-                                               Style="{DynamicResource MetroCheckBoxStyle}" Margin="3"
+                                               Style="{DynamicResource MetroCheckBoxStyle}" Margin="2"
                                                IsChecked="{Binding IsBluetooth}" />
                         <control:MetroCheckBox Content="投影" Icon="{StaticResource IconGamepad}"
-                                               Style="{DynamicResource MetroCheckBoxStyle}" Margin="3"
+                                               Style="{DynamicResource MetroCheckBoxStyle}" Margin="2"
                                                IsChecked="{Binding IsProject}" />
                     </WrapPanel>
-                </Border>
-            </Popup>
-
-            <UniformGrid>
-                <wpf:VideoView x:Name="VideoView0" Panel.ZIndex="0" />
-                <wpf:VideoView x:Name="VideoView1" Panel.ZIndex="0" />
-                <wpf:VideoView x:Name="VideoView2" Panel.ZIndex="0" />
-                <wpf:VideoView x:Name="VideoView3" Panel.ZIndex="0" />
-            </UniformGrid>
+                </HeaderedContentControl>
+            </Grid>
 
             <Border x:Name="MyToolBar" Margin="0,5,0,0"
                     SnapsToDevicePixels="True" BorderBrush="Transparent" BorderThickness="0" CornerRadius="1"
                     HorizontalAlignment="Center" VerticalAlignment="Top" Background="#66FFFFFF">
-                <WrapPanel HorizontalAlignment="Center" Background="#8000" ui:ThemeManager.RequestedTheme="Dark">
+                <WrapPanel HorizontalAlignment="Center" Background="#8000"
+                           ui:ThemeManager.RequestedTheme="Dark">
                     <control:IconButton Icon="{StaticResource IconShot}" Content="截屏"
                                         Style="{StaticResource ImageButtonStyle}"
                                         Margin="25,0,0,0" />
@@ -89,19 +107,22 @@
                 </Border.Effect>
             </Border>
 
-            <UniformGrid Columns="5" Height="200" Width="500" HorizontalAlignment="Left" VerticalAlignment="Bottom">
+            <UniformGrid Columns="5" Height="200" Width="500"
+                         HorizontalAlignment="Left" VerticalAlignment="Bottom">
                 <UniformGrid.Resources>
                     <Style TargetType="TextBlock" x:Key="TextTitle">
                         <Setter Property="HorizontalAlignment" Value="Left" />
                         <Setter Property="VerticalAlignment" Value="Top" />
                         <Setter Property="Margin" Value="0,5,0,0" />
-                        <Setter Property="Foreground" Value="{DynamicResource SystemControlForegroundChromeWhiteBrush}" />
+                        <Setter Property="Foreground"
+                                Value="{DynamicResource SystemControlForegroundChromeWhiteBrush}" />
                     </Style>
                     <Style TargetType="TextBlock" x:Key="DigitContent">
                         <Setter Property="HorizontalAlignment" Value="Left" />
                         <Setter Property="VerticalAlignment" Value="Bottom" />
                         <Setter Property="Margin" Value="0,0,0,5" />
-                        <Setter Property="Foreground" Value="{DynamicResource SystemControlForegroundChromeWhiteBrush}" />
+                        <Setter Property="Foreground"
+                                Value="{DynamicResource SystemControlForegroundChromeWhiteBrush}" />
                     </Style>
                 </UniformGrid.Resources>
                 <Grid>
@@ -146,17 +167,18 @@
                     <TextBlock Text="{Binding IsProject}" Style="{StaticResource DigitContent}" />
                 </Grid>
             </UniformGrid>
-        </Grid>
 
-        <!-- 状态栏 -->
-        <Grid VerticalAlignment="Bottom" Margin="0,0,0,0"
-              Background="{DynamicResource SystemControlBackgroundAccentBrush}"
-              Grid.Row="1">
-            <WrapPanel HorizontalAlignment="Right" VerticalAlignment="Center" Height="35">
-                <Button x:Name="BtnTest" Content="别点我" VerticalAlignment="Center" Height="35"
-                        ui:ThemeManager.RequestedTheme="Dark" />
-            </WrapPanel>
-        </Grid>
+            <!-- 状态栏 -->
+            <Grid VerticalAlignment="Bottom" Margin="0,0,0,0">
+                <WrapPanel HorizontalAlignment="Right" VerticalAlignment="Center" Height="35">
+                    <Button x:Name="BtnTest" Content="别点我" VerticalAlignment="Center" Height="35"
+                            Click="BtnTest_OnClick"
+                            ui:ThemeManager.RequestedTheme="Dark" />
+                </WrapPanel>
+            </Grid>
 
-    </Grid>
+            <!-- 虚拟焦点 -->
+            <TextBox Name="XuNiBox" Width="0" Height="0" Style="{x:Null}" />
+        </Grid>
+    </wpf:VideoView>
 </Window>
